# azure-openai-modelos-ia-generativa-3351165

./: .env_sample  .gitignore  Intro.md  README.md  client.py  sample_app.py  server.py
01 notebooks/: 2.3.env_config.ipynb  4.5.langchain_basic_components.ipynb
02_notebooks/: 1.rag_lc.ipynb  index.md  test.ipynb  tools_agens_graphs.ipynb
02_notebooks/example_data/: mlb_teams_2012.csv
04_noteebooks/: LangGraph.ipynb
04_noteebooks/example_data/: index.md
assistants/: assistant.ipynb  eval_dataset_3.jsonl  main.py  myevalresults.json  pyproject.toml
data/: eval_dataset_1.jsonl  eval_dataset_2.jsonl
files/: acceess_aoai.md  assistants_aoai.ipynb  auth_aoai.ipynb  azure_oai_code_interpreter.ipynb  azure_openai_intro.ipynb  chat_aoai.ipynb  dalle.md  dalle_tests.ipynb  embeddings.ipynb  embeddings.md  functions_aoai.ipynb  rag.md  responses_api.md  responsible_ai.md  servicio_aoai.md  test.ipynb  tokens.md
files/docs/: data.csv
gen_ai_app/: agent.py  requirements.txt
notebooks/: 1.2.3intro_to_langchain.ipynb  4.5.langchain_basic_components.ipynb
stories/: blancanieves.txt  cenicienta.txt
